apps/other/router/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: router-https
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - name: https
        port: 4443
        protocol: TCP
